2004-02-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: added a /googlefight command word. 
	Try /googlefight word1 word2.  Changed the app-tkchat package
	regexp for Joe Mistachkin to support low version numbers.

2003-02-09  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Removed the system messages that were displayed
	when asking for onlineusers to the ircbridge
	* tkchat.tcl: Added the local /noisy command to temporarily
	suppress adding messages from nicks that you find
	annoying. Whispers and emotes are not suppressed.

2004-02-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Some fixes and catches in the color handling to deal 
	with tcllib bug #891024.
	* tkchat.tcl: Added a visibility option to enable hiding actions
	that consist of a single dot by another user.

2004-02-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::Init): change default LogLevel to 'notice'

2004-01-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed (hopefully) a bug in the online-users
	scrollbar. I'm pretty sure its to do with the auto-remove feature.

2004-01-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Quiten errors in checkDone. If an error occurs,
	we'll move along to fetchPage for a retry.
	* tkchat.tcl:  Added scrollbar to the online users window and made
	this widget word wrap.

2003-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied fix from dgp for bug #849829. 

2003-10-08  Pascal Scheffers  <pascal@scheffers.net>
	
	* tkchat.tcl: Updated irc online users listing by asking ircbridge
	for 'onlineusers' automatically after login. 
	
2003-09-26  Pascal Scheffers for Joe Mistachkin <joe@mistachkin.com>
		
	* tkchat.tcl: Several bug fixes for the /alias system

2003-09-25  Pascal Scheffers for Joe Mistachkin <joe@mistachkin.com>
		
	* tkchat.tcl: Added dynamic command aliasses with /alias and
	/unalias and help to the about dialog.
